调整了文件的结构，将主内容置入sections目录下

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-%% Beginning of file 'sample701.tex'
+%% Beginning of file 'fast.tex'
 %%
 %% Version 7.0.1. Created May 2025.
 %% Version 7. Created January 2025.  
@@ -245,6 +245,7 @@ the Editorial office will ask you to shorten it. This abstract has 189 words.
 %% cross-references to sections, equations, tables, and figures.
 %% That way, if you change the order of any elements, LaTeX will
 %% automatically renumber them.
+\include{sections/sec1_intro}
 
 \section{A short history of AASTeX} 
 
