finish the abstract part ver1

--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,8 @@
 
 \begin{document}
 
-\title{Template \aastex v7.0.1 Article with Examples\footnote{Footnotes can be added to titles}}
+\title{Using 100-m Radio Telescope to Detect the 21-cm Signal During the Epoch of Reionization
+}
 
 %% A significant change from AASTeX v6+ is in the author blocks. Now an email
 %% address is required for each author. This means that each author requires
@@ -165,39 +166,38 @@
 %% The command appends "Corresponding Author: " to the argument it appears at
 %% the bottom left of the first page like the output from \email. 
 
-\author[orcid=0000-0000-0000-0001,sname='North America']{Tundra North America}
-\altaffiliation{Kitt Peak National Observatory}
-\affiliation{University of Saskatchewan}
-\email[show]{fakeemail1@google.com}  
+% \author[orcid=0000-0000-0000-0001,sname='North America']{Tundra North America}
+% \altaffiliation{Kitt Peak National Observatory}
+% \affiliation{University of Saskatchewan}
+% \email[show]{fakeemail1@google.com}  
 
-\author[orcid=0000-0000-0000-0002,gname=Bosque, sname='Sur America']{Forrest Sur Am\'{e}rica} 
-\altaffiliation{Las Campanas Observatory}
-\affiliation{Universidad de Chile, Department of Astronomy}
-\email{fakeemail2@google.com}
+% \author[orcid=0000-0000-0000-0002,gname=Bosque, sname='Sur America']{Forrest Sur Am\'{e}rica} 
+% \altaffiliation{Las Campanas Observatory}
+% \affiliation{Universidad de Chile, Department of Astronomy}
+% \email{fakeemail2@google.com}
 
-\author[gname=Savannah,sname=Africa]{S. Africa}
-\affiliation{South African Astronomical Observatory}
-\affiliation{University of Cape Town, Department of Astronomy}
-\email{fakeemail3@google.com}
+% \author[gname=Savannah,sname=Africa]{S. Africa}
+% \affiliation{South African Astronomical Observatory}
+% \affiliation{University of Cape Town, Department of Astronomy}
+% \email{fakeemail3@google.com}
 
-\author{River Europe}
-\affiliation{University of Heidelberg}
-\email{fakeemail4@google.com}
+\author{Shihan Gou}
+\affiliation{Department of Astronomy, Tsinghua University}
+\email{goush24@mails.tsinghua.edu.cn}
 
-\author[0000-0000-0000-0003,sname=Asia,gname=Mountain]{Asia Mountain}
-\altaffiliation{Astrosat Post-Doctoral Fellow}
-\affiliation{Tata Institute of Fundamental Research, Department of Astronomy}
-\email{fakeemail5@google.com}
+\author[0000-0002-1301-3893,sname=Mao,gname=Yi]{Yi Mao}
+\affiliation{Department of Astronomy, Tsinghua University}
+\email{ymao@tsinghua.edu.cn}
 
-\author[0000-0000-0000-0004]{Coral Australia}
-\affiliation{James Cook University, Department of Physics}
-\email{fakeemail6@google.com}
+% \author[0000-0000-0000-0004]{Coral Australia}
+% \affiliation{James Cook University, Department of Physics}
+% \email{fakeemail6@google.com}
 
-\author[gname=IceSheet]{Penguin Antarctica}
-\affiliation{Amundsen–Scott South Pole Station}
-\email{fakeemail7@google.com}
+% \author[gname=IceSheet]{Penguin Antarctica}
+% \affiliation{Amundsen–Scott South Pole Station}
+% \email{fakeemail7@google.com}
 
-\collaboration{all}{The Terra Mater collaboration}
+% \collaboration{all}{The Terra Mater collaboration}
 
 %% Use the \collaboration command to identify collaborations. This command
 %% takes an optional argument that is either a number or the word "all"
@@ -208,21 +208,7 @@
 %% Mark off the abstract in the ``abstract'' environment. 
 \begin{abstract}
 
-This example manuscript is intended to serve as a tutorial and template for
-authors to use when writing their own AAS Journal articles. The manuscript
-includes a history of \aastex\ and documents the new features in the
-previous versions as well as the new features in version 7. This
-manuscript includes many figure and table examples to illustrate these new
-features.  Information on features not explicitly mentioned in the article
-can be viewed in the manuscript comments or more extensive online
-documentation. Authors are welcome replace the text, tables, figures, and
-bibliography with their own and submit the resulting manuscript to the AAS
-Journals peer review system.  The first lesson in the tutorial is to remind
-authors that the AAS Journals, the Astrophysical Journal (ApJ), the
-Astrophysical Journal Letters (ApJL), the Astronomical Journal (AJ), and 
-the Planetary Science Journal (PSJ) all have a 250 word limit for the 
-abstract. The limit is 150 for RNAAS manuscripts. If you exceed this length 
-the Editorial office will ask you to shorten it. This abstract has 189 words.
+Despite extensive efforts, direct observational constraints on the epoch of reionization (EoR) remain scarce, and our understanding of this pivotal cosmic era is correspondingly limited. The redshifted 21-cm line of neutral hydrogen constitutes the most direct probe of reionization, yet the Square Kilometre Array (SKA) is still under construction, thereby impeding progress in EoR studies. Here, we demonstrate that 100 m-class single-dish radio telescopes can be used to detect the 21-cm signal from the EoR and to impose stringent bounds on reionization model parameters. We employ the semi-numerical code 21cmFAST to generate three-dimensional light-cone simulations of the 21 cm brightness-temperature field, and we base our observational forecasts on these mock data. Given the angular resolution limited by the 100-m aperture, our analysis focuses on the one-dimensional (line-of-sight, LoS) power spectra of the history-mean-subtracted 21 cm signal. We find that, with a total integration time of 100 h, a cumulative signal-to-noise ratio (SNR) in excess of $5 \sigma$ is achievable, rising to above $19 \sigma$ for 1000 h of observations. These results indicate that the three 100 m-class radio telescopes currently under construction in China possess the capability to deliver the first statistically robust measurement of the LoS EoR 21-cm power spectrum well before the SKA becomes available.
 
 \end{abstract}
 
