update for the introduction part

--- a/sections/sec1_intro.tex
+++ b/sections/sec1_intro.tex
@@ -1,2 +1,5 @@
 \section{INTRODUCTION}
-Test for the text divison.
+\label{sec:intro}
+Cosmology is a field driven by observations and data. For very high redshifts, the CMB observation provides the knowledge about the primordial initial conditions for the evolution of the late universe. For low redshifts ($z ~ O(1)$), the statistical properties of the large scale structure of the universe could be obtained from large galaxy surveys. However, the intermediate redshift range, from about $z = 5$ to $z = 30$, covering the cosmic dawn and the Epoch of Reionization (EoR), is still lack of direct observations. Indirect observations, such as the optical depth of the CMB photons, only provide a loose constraints of the reionization redshift with rough reionization history models like "TANH" model. The direct tracer of the EoR and cosmic dawn is just the 21-cm line signal, which is the hyperfine transition line of the ground state of the neutral hydrogen atom. Although the astrophysical information of the 21-cm signal is rich, the signal itself is very weak, and the foreground contamination is about 4-5 orders of magnitude larger than the signal, making the noise suppression and foreground removal the main challenges of the 21-cm signal detection.
+
+The 21-cm signal observations can be roughly diveded into two categories: global signal and fluctuation signal. The global signal observations do not care about the temperature differences between different sky directions, focusing on the average brightness temperature varing with redshifts, or frequencies, so the detector will be relatively smaller than the fluctuation signal observations. The most famous detection claim of the 21-cm signal in the cosmic dawn is from the EDGES experiment, which reported a strong absorption feature around $z \sim 17$ which is over $500 \text{mK}$, more than twice the maximum expected value with the known physical process considered. This unexpected strong absorption feature is still not confirmed by other experiments, and SARAS 3 group reported a null detection of the EDGES' signal with only a noise signal with rms $213 \text{mK}$. Though the experimental setting of global signal detection is relatively simple, the strong foreground makes the result highly controversial. On the other hand, the fluctuation signal detection offers another view to study the 21-cm signal structure and astrophysics. The ionizing photons from stars and AGN are highly inhomogeneous, making t
