finish the first version of the introduction

--- a/main.tex
+++ b/main.tex
@@ -113,6 +113,7 @@
 \usepackage{caption}   % 提供 \captionsetup
 \usepackage{booktabs}  % 提供 \toprule \midrule \bottomrule
 \usepackage{multirow}  % 提供 \multirow
+\usepackage{amsmath}
 \usepackage{tabularx} 
 
 \begin{document}
