--- a/sections/sec1_intro.tex
+++ b/sections/sec1_intro.tex
@@ -2,4 +2,8 @@
 \label{sec:intro}
 Cosmology is a field driven by observations and data. For very high redshifts, the CMB observation provides the knowledge about the primordial initial conditions for the evolution of the late universe. For low redshifts ($z ~ O(1)$), the statistical properties of the large scale structure of the universe could be obtained from large galaxy surveys. However, the intermediate redshift range, from about $z = 5$ to $z = 30$, covering the cosmic dawn and the Epoch of Reionization (EoR), is still lack of direct observations. Indirect observations, such as the optical depth of the CMB photons, only provide a loose constraints of the reionization redshift with rough reionization history models like "TANH" model. The direct tracer of the EoR and cosmic dawn is just the 21-cm line signal, which is the hyperfine transition line of the ground state of the neutral hydrogen atom. Although the astrophysical information of the 21-cm signal is rich, the signal itself is very weak, and the foreground contamination is about 4-5 orders of magnitude larger than the signal, making the noise suppression and foreground removal the main challenges of the 21-cm signal detection.
 
-The 21-cm signal observations can be roughly diveded into two categories: global signal and fluctuation signal. The global signal observations do not care about the temperature differences between different sky directions, focusing on the average brightness temperature varing with redshifts, or frequencies, so the detector will be relatively smaller than the fluctuation signal observations. The most famous detection claim of the 21-cm signal in the cosmic dawn is from the EDGES experiment, which reported a strong absorption feature around $z \sim 17$ which is over $500 \text{mK}$, more than twice the maximum expected value with the known physical process considered. This unexpected strong absorption feature is still not confirmed by other experiments, and SARAS 3 group reported a null detection of the EDGES' signal with only a noise signal with rms $213 \text{mK}$. Though the experimental setting of global signal detection is relatively simple, the strong foreground makes the result highly controversial. On the other hand, the fluctuation signal detection offers another view to study the 21-cm signal structure and astrophysics. The ionizing photons from stars and AGN are highly inhomogeneous, making t
+The 21-cm signal observations can be roughly diveded into two categories: global signal and fluctuation signal. The global signal observations do not care about the temperature differences between different sky directions, only focusing on the average brightness temperature varing with redshifts, or frequencies, so the detector will be relatively smaller than the fluctuation signal observations. The most famous detection claim of the 21-cm signal in the cosmic dawn is from the EDGES experiment, which reported a strong absorption feature around $z \sim 17$ which is over $500 \text{mK}$, more than twice the maximum expected value with the known physical process considered. This unexpected strong absorption feature is still not confirmed by other experiments, and SARAS 3 group reported a null detection of the EDGES' signal with only a noise signal with rms $213 \text{mK}$. Though the experimental setting of global signal detection is relatively simple, the strong foreground makes the result highly controversial. On the other hand, the fluctuation signal detection offers another view to study the 21-cm signal structure and astrophysics. The ionizing photons from stars and AGN are highly inhomogeneously distributed, making the 21-cm brightness temperature distribute with bubble-like and island-like structures in early and late EoR respectively. Based on summary statistics like power spectrum, we can extract the underlying astrophysical information and improve our understanding of the ionizing models. Currently, the SKA is the most promising experiment to detect the 21-cm fluctuation signal, but it is still under construction, and scientific observation will be available after 2029. Except SKA, HERA is the most sensitive experiment for the 21-cm power spectrum. However, it has ended the data collection due to finacial problems and its data is not publicly available yet. 
+
+Considering the difficulties in the mainstream global signal and fluctuation signal detection both, we propose here a new method to observe and analyze the 21-cm signal in EoR. Assuming that we have a large single dish radio telescope, with a diameter around $100 \text{m}$, we can point it to different foreground low directions in the sky with the tracking model and collect the radio signals from these directions with integration time around 10 hours each. After removing the foreground and subtracting the average history evolution along the line of sight of these directions, we can then obtrain the average spectrum of these line of sights. In order to foreacast the expected signal and the astrophysical information contained in the signal, we apply the semi-numerical simulation code 21cmFAST to generate the 21-cm brightness temperature light cone fields, and then mock the observation line of sight sampling process. For the forecast of the constraining ability of the astrophysical parameters, we vary the paramters $\zeta$ (ionizing efficiency) and $T_\text{vir}$  (minimal virial temperature of halos which can produce ionizing photons) in the brightness temperature simulation. By comparing the average spectra of different parameter combinations, we can then estimate the constraining ability of the data collected from 100-m single dish radio telescope.
+
+The rest of this paper is organized as follows. In section 2, we introduce the simulation setting details of our runs of 21cmFAST and the mock observation process. In section 3, we show the results of the average line of sight spectra and the constraing ability of the astrophysical parameter sets. Finally, we summerize our work and give a discussion about the difficulties of this observation mode/method in section 4.
