加入部分method部分

--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 %%
 %% RevTeX is no longer used in AASTeX v7+.
 %%
-\documentclass[linenumbers,trackchanges]{aastex701}
+\documentclass[linenumbers,trackchanges, twocolumn]{aastex701}
 %%
 %% This initial command takes arguments that can be used to easily modify 
 %% the output of the compiled manuscript. Any combination of arguments can be 
@@ -236,10 +236,10 @@ Despite extensive efforts, direct observational constraints on the epoch of reio
 %% cross-references to sections, equations, tables, and figures.
 %% That way, if you change the order of any elements, LaTeX will
 %% automatically renumber them.
-\include{sections/sec1_intro}
-\include{sections/sec2_method}
-\include{sections/sec3_result}
-\include{sections/sec4_summary}
+\input{sections/sec1_intro}
+\input{sections/sec2_method}
+\input{sections/sec3_result}
+\input{sections/sec4_summary}
 
 \section{A short history of AASTeX} 
 
