--- a/sections/sec2_method.tex
+++ b/sections/sec2_method.tex
@@ -22,3 +22,4 @@ in which $\theta$ is the angular resolution, $\lambda_z$ is the wavelength of th
     \end{tabular}
 \end{table}
 
+The typical bubble size during the EoR is around $O(10 \text{Mpc})$. From table \ref{tab:angular_resolution}, we can see that the single dish telescope with diameter $D=100 \text{m}$ is only capable to resolve the structure of the size of $~O(100 \text{Mpc})$, which is much larger than the typical bubble size. Therefore, in this work, we only focus on the average spectrum along different lines of sight, instead of the fluctuations perpendicular to the line of sight. It might be a concern that $O(100 \text{Mpc})$ has reached the cosmological scale, and it will make the signal fluctuations relatively small. Luckily, the receiver of the radio telescope could have a very high frequency resolution, which means that we are actually doing average across a very thin slice perpendicular to the line of sight for a certain frequency bin or redshift bin. The comoving distance resolution along the line of sight direction is given by:
